# text-graph_rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.adoc  api.yml
.scripts/: pipeline
db/: schema.yaml
db/docker/: .secrets.env  Dockerfile  docker-compose.yml
db/migrations/: 001_base.yml  002_graph.yml  003_indeces.yml  004_auth.yml
server/: .env  .secrets.env.rename  Cargo.toml
server/src/: main.rs  models.rs
server/src/core/: auth.rs  db.rs
server/src/http/: auth.rs  mod.rs  refs.rs  root.rs  topics.rs
server/src/models/: auth.rs  generic.rs  mod.rs  refs.rs  topics.rs
src/: main.rs  models.rs
src/core/: db.rs
