[package]
name = "text-graph_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
## Web service
actix-web = { version = "4.0.1" }
actix-service = { version = "2.0.2" }

## Database
aragog = { version = "0.16.1" }

## Serializatin and json support
serde = { version = "1.0.133", features = ["derive"] }
# serde_json = { version = "1.0.81" }

## Required for CLI and getting env variables
clap = { version = "3.1.9", features = ["env", "unicode", "wrap_help", "cargo"] }

## Testing
mockall = { version = "0.11.1" }
mockall_double = { version = "0.3.0" }

env_logger = { version = "0.9.0" }
log = { version = "0.4.17" }