[package]
name = "text-graph_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
## Web service
actix-web = { version = "4.0.1", features = ["secure-cookies"] }
actix-service = { version = "2.0.2" }
actix-web-lab = { version = "0.16" }
actix-identity = { version = "0.4" }

## Database
aragog = { version = "0.17" }

## Serializatin and json support
serde = { version = "1.0.133", features = ["derive"] }
serde_json = { version = "1.0.81" }

## Required for CLI and getting env variables
clap = { version = "3.2", features = ["env", "unicode", "wrap_help", "cargo", "derive"] }

## Testing
mockall = { version = "0.11.1" }
mockall_double = { version = "0.3.0" }

## Logging
env_logger = { version = "0.9.0" }
log = { version = "0.4.17" }

## misc
dotenv = { version = "0.15" }
rand = { version = "0.8" }
http = { version = "0.2" }

## auth
url = { version = "2.2" }
ureq = { version = "2.4" , features = ["json"] }
jsonwebtoken = { version = "8.1" }
chrono = { version = "0.4" , features = ["serde"]}
